# Masacarri

./: .dockerignore  Dockerfile  LICENSE  README.md  docker-compose-dev.yml  docker-compose.yml  entry-point.sh
masacarri/: .env.example  Cargo.toml
masacarri-demo/: package-lock.json  package.json  test.html
masacarri-front/: .env  README.md  env.d.ts  index.html  package-lock.json  package.json
masacarri-front/src/: CommentsStore.ts  main.ts  models.ts  utils.ts
masacarri-front/src/assets/: base.css  main.css
masacarri-front/src/components/: CommentForm.vue  CommentPost.vue
masacarri-front/src/components/admin/: PagesForm.vue
masacarri-front/src/router/: index.ts
masacarri-front/src/views/: AdminView.vue  CommentView.vue  HomeView.vue
masacarri/migrations/2022-08-02-074651_create_posts/: up.sql
masacarri/migrations/2022-08-04-111511_create_comments/: up.sql
masacarri/migrations/2022-08-23-032452_create_users_table/: up.sql
masacarri/src/: bgtask.rs  comment.rs  db.rs  error.rs  lib.rs  mail.rs  main.rs  models.rs  page.rs  schema.rs  utils.rs
