[package]
name = "masacarri"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.1"
actix-files = "0.6.2"
actix-identity = "0.5.2"
actix-session = { version = "0.7.1", features = ["redis-rs-session"] }
actix-web = "4"
bcrypt = "0.13.0"
chrono = { version = "0.4.20", features = ["serde"] }
diesel = { version = "1.4.8", features = ["chrono", "postgres", "r2d2", "uuidv07", "network-address"] }
dotenv = "0.15.0"
ipnetwork = "0.18.0"
lettre = "0.10.1"
r2d2 = "0.8.10"
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.83"
static_assertions = "1.1.0"
thiserror = "1.0.32"
uuid = { version = "0.8", features = ["v4", "serde"] }
